--- a/package.json
+++ b/package.json
@@ -22,13 +22,9 @@
     "jade": "./bin/jade.js"
   },
   "dependencies": {
-    "character-parser": "1.2.1",
-    "commander": "~2.6.0",
-    "constantinople": "~3.0.1",
-    "mkdirp": "~0.5.0",
-    "transformers": "2.1.0",
-    "void-elements": "~2.0.1",
-    "with": "~4.0.0"
+    "jison": "~0.4.15",
+    "jison-lex": "~0.3.4",
+    "extend": "~2.0.1"
   },
   "devDependencies": {
     "coffee-script": "*",
