--- a/package.json
+++ b/package.json
@@ -1,81 +1,34 @@
 {
   "name": "jade",
-  "description": "A clean, whitespace-sensitive template language for writing HTML",
-  "version": "1.9.2",
-  "author": "TJ Holowaychuk <tj@vision-media.ca>",
-  "maintainers": [
-    "Forbes Lindesay <forbes@lindesay.co.uk>",
-    "Matthias Le Brun <mlbli@me.com>",
-    "Joshua Appelman <joshua@jbna.nl>",
-    "Jonathan Ong <jonathanrichardong@gmail.com>",
-    "Alex Kocharin <alex@kocharin.ru>",
-    "Hemanth <hemanth.hm@gmail.com>",
-    "Timothy Gu <timothygu99@gmail.com>"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jadejs/jade"
-  },
-  "main": "lib",
+  "version": "1.0.0",
+  "description": "Full documentation is at [jade-lang.com](http://jade-lang.com/)",
+  "main": "Gruntfile.js",
   "bin": {
-    "jade": "./bin/jade.js"
+    "jade": "jade.js"
+  },
+  "directories": {
+    "doc": "docs",
+    "example": "examples",
+    "test": "test"
   },
   "dependencies": {
-    "jison": "~0.4.15",
-    "jison-lex": "~0.3.4",
-    "extend": "~2.0.1"
+    "extend": "^3.0.0",
+    "grunt": "^0.4.5",
+    "grunt-jison": "^1.3.2",
+    "jison": "^0.4.15"
   },
-  "devDependencies": {
-    "coffee-script": "*",
-    "coveralls": "^2.11.2",
-    "mocha": "*",
-    "istanbul": "*",
-    "stylus": "*",
-    "should": "*",
-    "less": "<2.0.0",
-    "uglify-js": "*",
-    "browserify": "*",
-    "linify": "*",
-    "less-file": "0.0.9",
-    "express": "~4.10.4",
-    "browserify-middleware": "~4.1.0",
-    "twbs": "0.0.6",
-    "highlight-codemirror": "~4.1.0",
-    "inconsolata": "0.0.2",
-    "jade-code-mirror": "~1.0.5",
-    "code-mirror": "~3.22.0",
-    "handle": "~1.0.0",
-    "jade-highlighter": "~1.0.5",
-    "marked": "~0.3.3",
-    "stop": "^3.0.0-rc1",
-    "opener": "^1.3.0",
-    "github-basic": "^4.1.2",
-    "pull-request": "^3.0.0",
-    "lsr": "^1.0.0",
-    "rimraf": "^2.2.8",
-    "grunt-contrib-uglify": "~0.9.1"
-  },
-  "component": {
-    "scripts": {
-      "jade": "runtime.js"
-    }
-  },
+  "devDependencies": {},
   "scripts": {
-    "test": "mocha -R spec",
-    "precoverage": "rimraf coverage && rimraf cov-pt*",
-    "coverage": "istanbul cover --report none --dir cov-pt0 node_modules/mocha/bin/_mocha -- -R dot",
-    "postcoverage": "istanbul report --include cov-pt\\*/coverage.json && rimraf cov-pt*",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
-    "prepublish": "npm prune && linify transform bin && npm run build",
-    "build": "npm run compile",
-    "compile": "npm run compile-full && npm run compile-runtime",
-    "compile-full": "browserify ./lib/index.js --standalone jade -x ./node_modules/transformers > jade.js",
-    "compile-runtime": "browserify ./lib/runtime.js --standalone jade > runtime.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "browser": {
-    "fs": false,
-    "./lib/filters.js": "./lib/filters-client.js"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andreytkachenko/jade.git"
   },
-  "homepage": "http://jade-lang.com"
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/andreytkachenko/jade/issues"
+  },
+  "homepage": "https://github.com/andreytkachenko/jade#readme"
 }
